Adjusted page for all type of device, fixed some spacing

--- a/css/queries.css
+++ b/css/queries.css
@@ -54,6 +54,16 @@
 }
 
 @media (max-width: 38em) {
+  .background {
+    height: 45rem;
+    background-image: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(153, 153, 153, 0) 100%
+      ),
+      url(../images/bg-header-mobile.png);
+  }
+
   .tools {
     flex-direction: column;
     align-items: center;
